fix: reduce header font size for desktop screens to prevent text wrapping

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -124,7 +124,7 @@ header .intro-text .skills {
     }
 
     header .intro-text .name {
-        font-size: 4.75em;
+        font-size: 3.2em;
     }
 
     header .intro-text .skills {
